# advent-of-code-2022

./: Cargo.toml
aoc-core/: Cargo.toml
aoc-core/src/: from_file.rs  lib.rs  opt.rs  puzzle.rs
aoc-day01/: Cargo.toml
aoc-day01/src/: elf.rs  main.rs
aoc-day02/: Cargo.toml
aoc-day02/src/: game.rs  main.rs
data/: bigint1_day01  invalid10_day07  invalid11_day07  invalid1_day01  invalid1_day02  invalid1_day03  invalid1_day04  invalid1_day05  invalid1_day06  invalid1_day08  invalid1_day09  invalid1_day10  invalid2_day02  invalid2_day03  invalid2_day04  invalid2_day05  invalid2_day07  invalid2_day08  invalid2_day09  invalid2_day10  invalid3_day01  invalid3_day02  invalid3_day04  invalid3_day05  invalid3_day07  invalid3_day09  invalid3_day10  invalid4_day02  invalid4_day03  invalid4_day04  invalid4_day05  invalid4_day07  invalid4_day10  invalid5_day05  invalid5_day07  invalid6_day05  invalid6_day07  invalid7_day05  invalid7_day07  invalid8_day05  (+3 more)
src/: lib.rs  main.rs  solver.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs
src/days/day01/: grammar.pest  mod.rs
src/days/day02/: grammar.pest  mod.rs
src/days/day03/: grammar.pest  mod.rs
src/days/day07/: command.rs  file_system.rs  mod.rs
